--- a/templates/b2b-email-list.html
+++ b/templates/b2b-email-list.html
@@ -568,8 +568,8 @@
           <p style="text-align:Justify;">Irrespective of the mode of communication and the geographical location you
             choose, our data solutions guarantee 95-98% campaign deliverability.</p>
           <p style="text-align:Justify;">Discovering potent businesses and connecting with them is now easier than ever!
-            Get in touch with <a href=/ title="Affluence Business Inc"><strong>Span
-                Global Services</strong></a> today to experience excellence blended with credibility! So, what are you
+            Get in touch with <a href=/ title="Affluence Business Inc"><strong>Affluence
+                Business Inc</strong></a> today to experience excellence blended with credibility! So, what are you
             waiting for? Subscribe to the B2B email lists from our data data repositories right away and up your
             marketing game! </p>
           <h2 class="subhead-small-blk">Take Your Business from Ambiguity to Certainty by Procuring the Right Contact
