--- a/templates/healthcare-lists.html
+++ b/templates/healthcare-lists.html
@@ -23,8 +23,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-7 section-fpad wow fadeInLeft">
-                        <h2 class="subhead-small-blk mb-2">Want a Bite of the Multi-Trillion Dollar Pie? Choose Span
-                            Global Services and Ace Healthcare Marketing</h2>
+                        <h2 class="subhead-small-blk mb-2">Want a Bite of the Multi-Trillion Dollar Pie? Choose Affluence
+                            Business Inc and Ace Healthcare Marketing</h2>
                         <p style="text-align:Justify;">The Covid-19 pandemic transformed the world in ways we still
                             haven’t been able to comprehend. However, it laid one of its biggest brunt on the healthcare
                             industry, ripping through it like a bittersweet sword. While medical units worldwide
@@ -220,8 +220,8 @@
                             virtual healthcare is quickly becoming a reality, and to properly conquer this industry, you
                             must adapt as a marketer. </p>
                         <p style="text-align:Justify;">Instead of banking on spray-and-pray emails and desperate
-                            outreaching, rely on data intelligence. Our <strong>healthcare email list</strong> at Span
-                            Global Services amalgamates intelligent customer insights with years of industry expertise
+                            outreaching, rely on data intelligence. Our <strong>healthcare email list</strong> at
+                            Affluence Business Inc amalgamates intelligent customer insights with years of industry expertise
                             to bring you the best solution. With us, you access a regularly-updated databank that houses
                             new contacts, allowing you to engage with prospects who’ve hopped on the virtual healthcare
                             train, as well as the traditional medical organizations. </p>
@@ -432,13 +432,13 @@
                                 <tr>
                                     <td><a href="/ent-specialist-email-list"
                                             title="ENT Specialist Email List">ENT Specialist Email List</a></td>
-                                    <td><a href="/gastroenterologists-email-and-mailing-list"
+                                    <td><a href="/gastroenterologists-email-and-mailing-list/"
                                             title="Gastroenterologists Email and Mailing List">Gastroenterologists Email
                                             and Mailing List</a></td>
-                                    <td><a href="/general-surgeons-email-and-mailing-list"
+                                    <td><a href="/general-surgeons-email-and-mailing-list/"
                                             title="General Surgeons Email and Mailing List">General Surgeons Email and
                                             Mailing List</a></td>
-                                    <td><a href="/global-physician-email-list"
+                                    <td><a href="/global-physician-email-list/"
                                             title="Global Physician Email List">Global Physician Email List</a></td>
                                 </tr>
                                 <tr>
