--- a/templates/industry-wise-lists/real-estate-industry-email-list.html
+++ b/templates/industry-wise-lists/real-estate-industry-email-list.html
@@ -26,8 +26,8 @@
                     <p style="text-align:Justify;">Do you need a trustworthy <strong>Real Estate Industry Email
                             List</strong> to communicate with real estate agents, brokers, contractors, key
                         decision-makers, and professionals? Do you want your sales and marketing teams to hit the right
-                        inboxes to promote your real estate services and solutions? If yes, then partner with Span
-                        Global Services today. Our Real Estate Email List will enable you to explore newer options in
+                        inboxes to promote your real estate services and solutions? If yes, then partner with Affluence
+                        Business Inc today. Our Real Estate Email List will enable you to explore newer options in
                         the real estate industries, resulting in a considerable increase in revenue. Real Estate Agent
                         Mailing Lists, Real Estate Agent Phone Numbers, and Real Estate Telemarketing Lists are among
                         the services we offer to marketers.</p>
