--- a/templates/professional-lists/loan-officer-email-list.html
+++ b/templates/professional-lists/loan-officer-email-list.html
@@ -56,8 +56,8 @@
                         streamline your sales cycle and grab solid ROIs. </p>
                     <h2 class="subhead-small-blk">Equip Your Marketing Campaigns with Data Insights You Can Trust</h2>
                     <p style="text-align:Justify;">With our data-rich <strong>Loan Officer Mailing List</strong>, boost
-                        your sales or email marketing campaigns to perform precision targeting of your audience. Span
-                        Global Services ensures to align with all your marketing requirements with our data-intensive
+                        your sales or email marketing campaigns to perform precision targeting of your audience.
+                        Affluence Business Inc ensures to align with all your marketing requirements with our data-intensive
                         aid to connect you with influential and industry-leading professionals from the loan and
                         mortgage sector.</p>
                     <p style="text-align:Justify;"><strong>With our USA Loan Officer Database, you can:</strong></p>
