--- a/templates/professional-lists/cio-email-list.html
+++ b/templates/professional-lists/cio-email-list.html
@@ -33,8 +33,8 @@
             campaigns.</p>
           <p style="text-align:Justify;">The electronic information grows in leaps and bounds and ensures the smooth
             functioning of the business process. The CIO is an outstanding target market for the sale and promotion of a
-            wide range of IT products and applications. The 100% accurate mailing list of CIOs brought to you by Span
-            Global Services is certain to help marketers reach CIOs and interact with decision making authority.</p>
+            wide range of IT products and applications. The 100% accurate mailing list of CIOs brought to you by
+            Affluence Business Inc is certain to help marketers reach CIOs and interact with decision making authority.</p>
           <p style="text-align:Justify;">Our comprehensive <strong>CIO Email Database</strong> ensures that marketers
             reach CIOs across businesses through direct, online or telemarketing campaigns. </p>
           <p style="text-align:Justify;">In addition to the type of lead generated, how one reaches the targeted
@@ -312,8 +312,8 @@
                     <div id="collapseTwo" class="collapse " aria-labelledby="headingTwo"
                       data-parent="#accordionExample">
                       <div class="card-body">
-                        <p>You are already on the best platform to purchase a robust CIO email marketing database. Span
-                          Global Services is the leading provider of marketing lists for the past two decades. There may
+                        <p>You are already on the best platform to purchase a robust CIO email marketing database. Affluence
+                          Business Inc is the leading provider of marketing lists for the past two decades. There may
                           be an ocean of data out there, but we provide the best and most trustworthy service to enhance
                           your marketing.</p>
                       </div>
